<resources>
    <string name="app_name">NavCal</string>

    <string name="total">Total Mulch Needed for Project</string>
    <string name="totalTank">Total Tank Loads Needed for Project</string>
    <string name="tankSize">Tank Size</string>
    <string name="mulchMixing">Mulch Mixing Rate</string>


    <string name="gal">gal</string>
    <string name="lbsGal">lbs/100 gal</string>
    <string name="sqFt">sq. ft</string>
    <string name="lbAcre">lbs/acre</string>
    <string name="lbsBag">lbs</string>
    <string name="projectName">Enter Project Name</string>
    <string name="projectSize">Total Size of Project</string>
    <string name="mulchRate">Target Mulch Application Rate</string>
    <string name="weightBag">Weight of Mulch(per bag)</string>
    <string name="home">Home prototype</string>

    <string name="erosion">Erosion Control Toolbox</string>

</resources>